--- a/app/src/styles/styles.scss
+++ b/app/src/styles/styles.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Zen Kaku Gothic New", sans-serif;
     scrollbar-width: none;
     min-height: 150vh;
     padding-bottom: 5vh;
